cmake_minimum_required (VERSION 2.8)
project(cmake_test)

aux_source_directory(. DIR_SRCS)
add_subdirectory(libs)
add_executable(latte_c ${DIR_SRCS})
option(USE_JEMALLOC "option for debug" OFF)
if (USE_JEMALLOC)
    include_directories ("${PROJECT_SOURCE_DIR}/deps/include")
    target_link_libraries(latte_c ${PROJECT_SOURCE_DIR}/deps/jemalloc/lib/libjemalloc.a)
    add_definitions(-DUSE_JEMALLOC)
endif (USE_JEMALLOC)
target_link_libraries(latte_c zmalloc)